--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2>₹449 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -180,10 +180,10 @@
       <div class="col-lg-4 col-md-6 pricing-column">
         <div class="card">
           <div class="card-header">
-            <h3>Mastiff</h3>
+            <h3>Sepherd</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2>₹999 / mo</h2>
             <p>Priority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
